added header and logo image to the html element

--- a/index.html
+++ b/index.html
@@ -1,10 +1,29 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
-
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>DELANI STUDIO</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="css/boostrap.min.css" type="text/css">
+        <link rel="stylesheet" href="css/styles.css" type="text/css">
     </head>
     <body>
+        <div class="container">
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-md-6">
+                        <img div class="img" src="img/logo.jpeg" alt="logo">
+                        <h1>WELCOME</h1>
+                        <h1>TO DELANI STUDIO</h1>
+                        <P>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</P>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </body>
+    <script src="js/jquery-3.5.1.min.js"></script>
+    <script type="text/javascript" src="js/scripts.js"></script>
 </html>
