--- a/index.html
+++ b/index.html
@@ -8,21 +8,23 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/boostrap.min.css" type="text/css">
         <link rel="stylesheet" href="css/styles.css" type="text/css">
+        <link rel="fonts" href="fonts/google fonts/Roboto-ThinItalic.ttf" type="text/fonts">
     </head>
     <body>
-        <div class="container">
-            <div class="card-body">
-                <div class="row">
-                    <div class="col-md-6">
-                        <img div class="img" src="img/logo.jpeg" alt="logo">
-                        <h1>WELCOME</h1>
-                        <h1>TO DELANI STUDIO</h1>
-                        <P>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</P>
-                    </div>
-                </div>
+        <div class="landing">
+            <img src="img/logo.jpeg" alt="logo" id="logo">
+            <h1>WELCOME</h1>
+            <h1>TO DELANI STUDIO</h1>
+            <P>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</P>
+            <div class="mouse click"></div>
+            <a href="#about-us"><img src="img/mouse_click.png" alt="mouse click"></a>
+            <div class="container us" id="about us">
+                <h2 id="about">ABOUT US</h2>
+                <P>When you work with us, you are part of a team of commited collaborators. All aspects of our software development process are intergrated , interactive and agile.</P>
+                <P>Our approach unifies design, development and product managent to create exceptional products.</P>
+                <P>We help translate them into active and elegant solutions.</P>
             </div>
         </div>
-
     </body>
     <script src="js/jquery-3.5.1.min.js"></script>
     <script type="text/javascript" src="js/scripts.js"></script>
