--- a/index.html
+++ b/index.html
@@ -15,16 +15,22 @@
             <img src="img/logo.jpeg" alt="logo" id="logo">
             <h1>WELCOME</h1>
             <h1>TO DELANI STUDIO</h1>
-            <P>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</P>
-            <div class="mouse click"></div>
-            <a href="#about-us"><img src="img/mouse_click.png" alt="mouse click"></a>
-            <div class="container us" id="about us">
-                <h2 id="about">ABOUT US</h2>
-                <P>When you work with us, you are part of a team of commited collaborators. All aspects of our software development process are intergrated , interactive and agile.</P>
-                <P>Our approach unifies design, development and product managent to create exceptional products.</P>
-                <P>We help translate them into active and elegant solutions.</P>
-            </div>
+                 <P>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</P>
+                    <div class="mouse click"></div>
+                    <a href="#about-us"><img src="img/mouse_click.png" alt="mouse click"></a>
         </div>
+            <div class="about">
+                <h2 id="about">ABOUT US</h2>
+                    <P>When you work with us, you are part of a team of commited collaborators. All aspects of our software development process are intergrated , interactive and agile.</P>
+                    <P>Our approach unifies design, development and product managent to create exceptional products.</P>
+                    <P>We help translate them into active and elegant solutions.</P>
+            </div>
+            <div class="services">
+                <h2 id="services">OUR SERVICES</h2>
+                    <P>Before we sign a contract or write a line of code, our team will spend the neccessary time needed to understand your product vission.</P>
+                    <P>The outcome of the scoping session a proposal or high-level statement of work.</P>
+                    <P>based on your requirements, we can provide a complete offering or just the piece you need.</P>
+            </div>
     </body>
     <script src="js/jquery-3.5.1.min.js"></script>
     <script type="text/javascript" src="js/scripts.js"></script>
