added icon pictures of development, product and design

--- a/index.html
+++ b/index.html
@@ -31,6 +31,29 @@
                     <P>The outcome of the scoping session a proposal or high-level statement of work.</P>
                     <P>based on your requirements, we can provide a complete offering or just the piece you need.</P>
             </div>
+            <div class="container what-we do">
+                <h2 id="headings">WHAT WE DO</h2>
+                <div class="row">
+                    <div class="col-md-4">
+                        <div id="design">
+                        <img src="img/design_icon.png" alt="design">
+                        <p>DESIGN</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div id="developmet">
+                            <img src="img/dev_icon.png" alt="developmet">
+                            <p>DEVELOPMENT</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div id="product">
+                            <img src="img/product_icon.png" alt="product">
+                            <p>PRODUCT MANAGEMENT</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
     </body>
     <script src="js/jquery-3.5.1.min.js"></script>
     <script type="text/javascript" src="js/scripts.js"></script>
