--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>DELANI STUDIO</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="css/boostrap.min.css" type="text/css">
+        <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
         <link rel="stylesheet" href="css/styles.css" type="text/css">
         <link rel="fonts" href="fonts/google fonts/Roboto-ThinItalic.ttf" type="text/fonts">
     </head>
@@ -50,6 +50,18 @@
                         <div id="product">
                             <img src="img/product_icon.png" alt="product">
                             <p>PRODUCT MANAGEMENT</p>
+                        </div>
+                    </div>
+                 </div>
+            
+                <div class="portfolio">
+                    <h2>PORTFOLIO</h2>
+                    <div class="row" id="portfolio">
+                        <div class="col-md-7" id="work1">
+                            <img src="img/work1.jpg" alt="work1">
+                        </div>
+                        <div class="col-md-5" id="work2">
+                            <img src="img/work2.jpg" alt="work2">
                         </div>
                     </div>
                 </div>
