--- a/index.html
+++ b/index.html
@@ -57,11 +57,17 @@
                 <div class="portfolio">
                     <h2>PORTFOLIO</h2>
                     <div class="row" id="portfolio">
-                        <div class="col-md-7" id="work1">
+                        <div class="col-md-3" id="work1">
                             <img src="img/work1.jpg" alt="work1">
                         </div>
-                        <div class="col-md-5" id="work2">
+                        <div class="col-md-3" id="work2">
                             <img src="img/work2.jpg" alt="work2">
+                        </div>
+                        <div class="col-md-3" id="work3">
+                             <img src="img/work3.jpg" alt="work3">
+                        </div>
+                        <div class="col-md-3" id="work4">
+                            <img src="img/work4.jpg" alt="work4">
                         </div>
                     </div>
                 </div>
