--- a/index.html
+++ b/index.html
@@ -70,6 +70,35 @@
                             <img src="img/work4.jpg" alt="work4">
                         </div>
                     </div>
+                    <div class="row" id="portfolio">
+                        <div class="col-md-3" id="work5">
+                            <img src="img/work5.jpg" alt="work5">
+                        </div>
+                        <div class="col-md-3" id="work6">
+                            <img src="img/work6.jpg" alt="work6">
+                        </div>
+                        <div class="col-md-3" id="work7">
+                            <img src="img/work7.jpg" alt="work7">
+                        </div>
+                        <div class="col-md-3" id="work8">
+                            <img src="img/work8.jpg" alt="work8">
+                        </div>
+                    </div>
+                </div>
+                <div class="container-fluid contact">
+                    <h2>CONTACT US</h2>
+                    <form id="form34A" action="https://gmail.us3.list-manage.com/subscribe/post" method="POST">
+                    <input type="hidden" name="u" value="">
+                    <input type="hidden" name="id" value="">
+                    <div class="form-group form inline">
+                        <input type="text" class="form-control" placeholder="Name..." name="merge1" size="25" value="">
+                        <input type="email" class="form-control" placeholder="Email.." autocapitalize="off" autocorrect="off" name="merge1">
+                    </div>
+                    <div class="form-group">
+                        <textarea class="form-control" rows="8" id="comment" placeholder="Your message here..."></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-primary" col-md-1>Submit</button>
+                    </form>
                 </div>
             </div>
     </body>
