added changes to the contact text where the placeholders should be transparent. and also added social media icons and used stylesheet to aling them in the center

--- a/index.html
+++ b/index.html
@@ -101,8 +101,23 @@
                     <button type="submit" class="btn btn-primary" col-md-1>Submit</button>
                     </form>
                 </div>
-            
-    </body>
+            <footer>
+                <div class="card-footer">
+                <img src="img/twitter.png" alt="twitter">
+                <img src="img/behance.png" alt="behance">
+                <img src="img/dribble.png" alt="dribble">
+                <img src="img/facebook.png" alt="facebook">
+                <img src="img/flickr.png" alt="flickr">
+                <img src="img/g_plus.png" alt="g_plus">
+                <img src="img/pinterest.png" alt="pinterest">
+                <img src="img/skype.png" alt="skype">
+                <img src="img/stumble_upon.png" alt="stumble_upon">
+                <img src="img/you_tube.png" alt="you_tube">
+                <p>Delani Studio</p>
+                <p>By Jack Oyugi! 2020</p>
+                </div>
+            </footer>
     <script src="js/jquery-3.5.1.min.js"></script>
     <script type="text/javascript" src="js/scripts.js"></script>
+</body>
 </html>
