added descriptive information of what we do through paragraphs

--- a/index.html
+++ b/index.html
@@ -36,18 +36,33 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div id="design">
-                        <img src="img/design_icon.png" alt="design">
-                        <p>DESIGN</p>
+                            <h2 class="title">DESIGN</h2>
+                            <P>Our design practice offers a full range of services including brand strategy, interaction and visual design and user experience testing.</P>
+                            <P>Throughout your project, our designers create and implement visual design and workflows, solicit user feedback and work with you to make sure what gets built is what is needed.</P>
+                        </div>
+                        <div id="design-image">
+                            <img src="img/design_icon.png" alt="design">
+                            <p>DESIGN</p>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div id="developmet">
+                            <h2 class="title">DEVELOPMENT</h2>
+                            <P>All engineers are fluent in the latest enterprise, mobile and web development technologies.</P>
+                            <P>They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</P>
+                        </div>
+                        <div id="development-image">
                             <img src="img/dev_icon.png" alt="developmet">
                             <p>DEVELOPMENT</p>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div id="product">
+                            <h2 class="title">PRODUCT MANAGEMENT</h2>
+                            <P>Planning and development is interactive. Because we are constantly coding and testing. The product we build are always ready to go live</P>
+                            <P>The interactive proces allows for changes as business requirements evolve</P>
+                        </div>
+                        <div id="product-image">
                             <img src="img/product_icon.png" alt="product">
                             <p>PRODUCT MANAGEMENT</p>
                         </div>
