--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <div id="developmet">
+                        <div id="development">
                             <h2 class="title">DEVELOPMENT</h2>
                             <P>All engineers are fluent in the latest enterprise, mobile and web development technologies.</P>
                             <P>They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</P>
@@ -74,29 +74,37 @@
                     <div class="row" id="portfolio">
                         <div class="col-md-3" id="work1">
                             <img src="img/work1.jpg" alt="work1">
+                            <p id="overlay" class="text">Calculator</p>
                         </div>
                         <div class="col-md-3" id="work2">
                             <img src="img/work2.jpg" alt="work2">
+                            <p id="overlay2" class="text">Pyramid</p>
                         </div>
                         <div class="col-md-3" id="work3">
                              <img src="img/work3.jpg" alt="work3">
+                             <p id="overlay3" class="text">Ontario Security</p>
                         </div>
                         <div class="col-md-3" id="work4">
                             <img src="img/work4.jpg" alt="work4">
+                            <p id="overlay4" class="text">Black Studio</p>
                         </div>
                     </div>
                     <div class="row" id="portfolio">
                         <div class="col-md-3" id="work5">
                             <img src="img/work5.jpg" alt="work5">
+                            <p id="overlay5" class="text">Have a nice day</p>
                         </div>
                         <div class="col-md-3" id="work6">
                             <img src="img/work6.jpg" alt="work6">
+                            <p id="overlay6" class="text">Jim Carry</p>
                         </div>
                         <div class="col-md-3" id="work7">
                             <img src="img/work7.jpg" alt="work7">
+                            <p id="overlay7" class="text">Burned</p>
                         </div>
                         <div class="col-md-3" id="work8">
                             <img src="img/work8.jpg" alt="work8">
+                            <p id="overlay8" class="text">Giraffe Resturant</p>
                         </div>
                     </div>
                 </div>
