--- a/index.html
+++ b/index.html
@@ -112,15 +112,15 @@
             </div>
                 <div class="container-fluid contact">
                     <h2>CONTACT US</h2>
-                    <form id="form34A" action="https://gmail.us3.list-manage.com/subscribe/post" method="POST">
+                    <form id="form34A" action="https://mailchi.mp/[xxxxxx]/[xxxxxx].com/subscribe/post" method="POST">
                     <input type="hidden" name="u" value="">
                     <input type="hidden" name="id" value="">
                     <div class="form-group form inline">
-                        <input type="text" class="form-control" placeholder="Name..." name="merge1" size="25" value="">
-                        <input type="email" class="form-control" placeholder="Email.." autocapitalize="off" autocorrect="off" name="merge0">
+                        <input type="text" class="form-control" placeholder="Please insert your name..." name="merge1" size="25" value="">
+                        <input type="email" class="form-control" placeholder="Please insert your mail.." autocapitalize="off" autocorrect="off" name="merge0">
                     </div>
                     <div class="form-group">
-                        <textarea class="form-control" rows="8" id="comment" placeholder="Your message here..."></textarea>
+                        <textarea class="form-control" rows="8" id="comment" placeholder="Enter your message here..."></textarea>
                     </div>
                     <button type="submit" class="btn btn-primary" col-md-1>Submit</button>
                     </form>
