--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
                     <P>We help translate them into active and elegant solutions.</P>
             </div>
             <div class="services">
-                <h2 id="services">OUR SERVICES</h2>
+                <h2 id="servicesoverlay">OUR SERVICES</h2>
                     <P>Before we sign a contract or write a line of code, our team will spend the neccessary time needed to understand your product vission.</P>
                     <P>The outcome of the scoping session a proposal or high-level statement of work.</P>
                     <P>based on your requirements, we can provide a complete offering or just the piece you need.</P>
             </div>
-            <div class="container what-we do">
+            <div class="container what-we-do">
                 <h2 id="headings">WHAT WE DO</h2>
                 <div class="row">
                     <div class="col-md-4">
