--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
             <h1>WELCOME</h1>
             <h1>TO DELANI STUDIO</h1>
                  <P>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</P>
-                    <div class="mouse click"></div>
+                    <div class="mouse click">
                     <a href="#about-us"><img src="img/mouse_click.png" alt="mouse click"></a>
+                    </div>
         </div>
             <div class="about">
                 <h2 id="about">ABOUT US</h2>
